--- a/frontend/src/app/components/nav/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/nav/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <div
-  class="sidebar-container"
+  class="sidebar-container no-scrollbars"
   *ngIf="!isMobileView"
   [style.width]="isExpanded ? '200px' : '60px'"
 >
