--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -64,3 +64,14 @@ button,
   opacity: 0.3;
   transition: 0s;
 }
+
+.no-scrollbars {
+  /* Hide scrollbar for IE, Edge and Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
