IOT-40 Removed visible scrollbars

--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -65,6 +65,8 @@ button,
   transition: 0s;
 }
 
+html,
+body,
 .no-scrollbars {
   /* Hide scrollbar for IE, Edge and Firefox */
   -ms-overflow-style: none; /* IE and Edge */
