IOT-40 Implemented mobile sidebar dark theme

--- a/frontend/src/app/components/nav/navbar/navbar.component.html
+++ b/frontend/src/app/components/nav/navbar/navbar.component.html
@@ -42,36 +42,36 @@
 
   <!--------- NAVBAR MOBILE MENU -------->
   <div
-    class="navbar-menu"
+    class="navbar-menu has-background-primary-dark"
     *ngIf="isMobileView"
     [class.is-active]="isMobileMenuOpen"
   >
     <div class="navbar-start">
-      <a class="navbar-item" routerLink="">
+      <a class="navbar-item link-active" routerLink="">
         <i class="material-icons">explore</i>
         <span class="is-size-5">Dashboard</span>
       </a>
-      <a class="navbar-item" routerLink="">
+      <a class="navbar-item link-inactive" routerLink="">
         <i class="material-icons">factory</i>
         <span class="is-size-5">Impianti</span>
       </a>
-      <a class="navbar-item" routerLink="">
+      <a class="navbar-item link-inactive" routerLink="">
         <i class="material-icons">warning</i>
         <span class="is-size-5">Allarmi</span>
       </a>
-      <a class="navbar-item" routerLink="">
+      <a class="navbar-item link-inactive" routerLink="">
         <i class="material-icons">bar_chart</i>
         <span class="is-size-5">Storico</span>
       </a>
-      <a class="navbar-item" routerLink="">
+      <a class="navbar-item link-inactive" routerLink="">
         <i class="material-icons">tune</i>
         <span class="is-size-5">Soglie</span>
       </a>
-      <a class="navbar-item" routerLink="">
+      <a class="navbar-item link-inactive" routerLink="">
         <i class="material-icons">people</i>
         <span class="is-size-5">Utenti</span>
       </a>
-      <a class="navbar-item" routerLink="">
+      <a class="navbar-item link-inactive" routerLink="">
         <i class="material-icons">monitor_heart</i>
         <span class="is-size-5">Diagnostica</span>
       </a>
