--- a/frontend/src/app/components/nav/sidebar/sidebar.component.scss
+++ b/frontend/src/app/components/nav/sidebar/sidebar.component.scss
@@ -31,8 +31,8 @@ $link-bg-color: rgba(0, 0, 0, 0.25);
     padding-left: 1em;
     height: 3.75em;
 
-    &:hover:not(.active),
-    &:focus:not(.active) {
+    &:hover:not(.link-active),
+    &:focus:not(.link-active) {
       background-color: $link-bg-color;
     }
     &:active {
