IOT-40 Code refactoring

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-navbar (onToggleSidebar)="toggleSidebar()"></app-navbar>
+<app-navbar (toggleSidebar)="toggleSidebar()"></app-navbar>
 
 <app-sidebar [isExpanded]="isSidebarExpanded"></app-sidebar>
 <div
