--- a/frontend/src/app/components/nav/menu/menu.component.scss
+++ b/frontend/src/app/components/nav/menu/menu.component.scss
@@ -29,6 +29,10 @@ $link-bg-color: rgba(0, 0, 0, 0.25);
     &:active {
       background-color: $link-bg-color;
     }
+    // Mobile view
+    @media screen and (max-width: $tablet) {
+      height: 3.25em;
+    }
   }
 }
 
