Updated nav menu component name

--- a/frontend/src/app/components/nav/navbar/navbar.component.html
+++ b/frontend/src/app/components/nav/navbar/navbar.component.html
@@ -47,7 +47,7 @@
     [class.is-active]="isMobileMenuOpen"
   >
     <div class="navbar-start">
-      <app-menu (linkClicked)="onMenuLinkClicked()"></app-menu>
+      <app-nav-menu (linkClicked)="onMenuLinkClicked()"></app-nav-menu>
     </div>
   </div>
 </nav>
