--- a/frontend/src/app/components/nav/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/nav/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
   [style.width]="isExpanded ? '200px' : '60px'"
 >
   <!--------- SIDEBAR MENU ----------->
-  <app-menu></app-menu>
+  <app-nav-menu></app-nav-menu>
 
   <!--------- SIDEBAR LOGO ----------->
   <div class="logo-container" *ngIf="isExpanded">
