--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -11,6 +11,7 @@
 
 @import "variables.scss";
 @import "bulma/bulma";
+@import "bulma-list/sass/bulma-list";
 
 /* MATERIAL ICONS STYLING */
 /* Docs: https://developers.google.com/fonts/docs/material_icons */
