--- a/frontend/src/app/components/systems/system-panel/system-panel.component.scss
+++ b/frontend/src/app/components/systems/system-panel/system-panel.component.scss
@@ -49,7 +49,8 @@ $danger-color: #f14668;
   padding: 0;
   display: none;
 
-  @include mobile {
+  // Touch device
+  @media screen and (hover: none) {
     display: block;
   }
 
