--- a/frontend/src/app/components/systems/system-panel/system-panel.component.html
+++ b/frontend/src/app/components/systems/system-panel/system-panel.component.html
@@ -1,8 +1,10 @@
 <div class="panel is-danger">
   <!-- Panel header -->
   <div class="panel-heading">
-    <span class="icon"><i class="material-icons">home</i></span>
-    <span>Impianto 1</span>
+    <span class="icon"
+      ><i class="material-icons">{{ system.icon }}</i></span
+    >
+    <span>{{ system.name }}</span>
   </div>
 
   <!-- Search panel -->
@@ -16,39 +18,11 @@
   </div>
 
   <!-- Master node panel -->
-  <div class="panel-block">
-    <div class="panel-left">
-      <i class="material-icons panel-icon">hub</i>
-      <span>Nodo master</span>
-    </div>
-    <div class="list-item-controls">
-      <div class="buttons is-right">
-        <button class="button">
-          <span class="icon">
-            <i class="material-icons">edit</i>
-          </span>
-        </button>
-
-        <button
-          class="button"
-          title="Almeno un nodo slave ancora presente"
-          disabled
-        >
-          <span class="icon">
-            <i class="material-icons">delete</i>
-          </span>
-        </button>
-      </div>
-    </div>
-  </div>
-
-  <!-- Slave nodes panel -->
-  <div class="panel-block slave-panel">
-    <!-- Slave node 1 -->
-    <div class="slave-block">
+  <ng-container *ngFor="let masterNode of system.masterNodes">
+    <div class="panel-block">
       <div class="panel-left">
-        <i class="material-icons panel-icon">sensors</i>
-        <span>Nodo slave 1</span>
+        <i class="material-icons panel-icon">hub</i>
+        <span>{{ masterNode.name }}</span>
       </div>
       <div class="list-item-controls">
         <div class="buttons is-right">
@@ -58,13 +32,11 @@
             </span>
           </button>
 
-          <button class="button">
-            <span class="icon">
-              <i class="material-icons">power_settings_new</i>
-            </span>
-          </button>
-
-          <button class="button">
+          <button
+            class="button"
+            title="Almeno un nodo slave ancora presente"
+            disabled
+          >
             <span class="icon">
               <i class="material-icons">delete</i>
             </span>
@@ -73,94 +45,38 @@
       </div>
     </div>
 
-    <!-- Slave node 2 -->
-    <div class="slave-block">
-      <div class="panel-left">
-        <i class="material-icons panel-icon">sensors</i>
-        <span>Nodo slave 2</span>
-      </div>
-      <div class="list-item-controls">
-        <div class="buttons is-right">
-          <button class="button">
-            <span class="icon">
-              <i class="material-icons">edit</i>
-            </span>
-          </button>
+    <!-- Slave nodes panel -->
+    <div class="panel-block slave-panel" *ngIf="masterNode.slaveNodes">
+      <!-- Slave node  -->
+      <div class="slave-block" *ngFor="let slaveNode of masterNode.slaveNodes">
+        <div class="panel-left">
+          <i class="material-icons panel-icon">sensors</i>
+          <span>{{ slaveNode.name }}</span>
+        </div>
+        <div class="list-item-controls">
+          <div class="buttons is-right">
+            <button class="button">
+              <span class="icon">
+                <i class="material-icons">edit</i>
+              </span>
+            </button>
 
-          <button class="button">
-            <span class="icon">
-              <i class="material-icons">power_settings_new</i>
-            </span>
-          </button>
+            <button class="button">
+              <span class="icon">
+                <i class="material-icons">power_settings_new</i>
+              </span>
+            </button>
 
-          <button class="button">
-            <span class="icon">
-              <i class="material-icons">delete</i>
-            </span>
-          </button>
+            <button class="button">
+              <span class="icon">
+                <i class="material-icons">delete</i>
+              </span>
+            </button>
+          </div>
         </div>
       </div>
     </div>
-
-    <!-- Slave node 3 -->
-    <div class="slave-block">
-      <div class="panel-left">
-        <i class="material-icons panel-icon">sensors</i>
-        <span>Nodo slave 3</span>
-      </div>
-      <div class="list-item-controls">
-        <div class="buttons is-right">
-          <button class="button">
-            <span class="icon">
-              <i class="material-icons">edit</i>
-            </span>
-          </button>
-
-          <button class="button">
-            <span class="icon">
-              <i class="material-icons">power_settings_new</i>
-            </span>
-          </button>
-
-          <button class="button">
-            <span class="icon">
-              <i class="material-icons">delete</i>
-            </span>
-          </button>
-        </div>
-      </div>
-    </div>
-
-    <!-- Slave node 4 -->
-    <div class="slave-block">
-      <div class="panel-left">
-        <i class="material-icons panel-icon">sensors</i>
-        <span>Nodo slave 4</span>
-      </div>
-      <div class="list-item-controls">
-        <div class="buttons is-right">
-          <button class="button">
-            <span class="icon">
-              <i class="material-icons">edit</i>
-            </span>
-          </button>
-
-          <button class="button">
-            <span class="icon">
-              <i class="material-icons">power_settings_new</i>
-            </span>
-          </button>
-
-          <button class="button">
-            <span class="icon">
-              <i class="material-icons">delete</i>
-            </span>
-          </button>
-        </div>
-      </div>
-    </div>
-  </div>
-
+  </ng-container>
   <!-- Add nodes panel -->
   <div class="panel-block">
     <button class="button is-danger">
