IOT-49 First attempt of responsive layout

--- a/frontend/src/app/components/systems/system-panel/system-panel.component.html
+++ b/frontend/src/app/components/systems/system-panel/system-panel.component.html
@@ -1,4 +1,4 @@
-<div class="panel is-danger">
+<div class="panel is-{{ system.color }}">
   <!-- Panel header -->
   <div class="panel-heading">
     <span class="icon"
@@ -79,7 +79,7 @@
   </ng-container>
   <!-- Add nodes panel -->
   <div class="panel-block">
-    <button class="button is-danger">
+    <button class="button is-{{ system.color }}">
       <span class="icon"
         ><i class="material-icons" aria-hidden="true">add_circle</i></span
       >
