--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -3,14 +3,5 @@
 
 .content {
   margin-left: $side-navbar-width;
-  padding: 25px 30px;
-
-  // @include tablet-only {
-  //   margin-left: $side-navbar-collapsed-width;
-  // }
-
-  // Mobile view
-  // @media screen and (max-width: $tablet) {
-  //   margin-left: 0;
-  // }
+  padding: 1rem 2rem;
 }
