IOT-49 Disabled add slave button - Disabled "add slave" button when there are no master nodes

--- a/frontend/src/app/components/systems/system-panel/system-panel.component.html
+++ b/frontend/src/app/components/systems/system-panel/system-panel.component.html
@@ -85,7 +85,7 @@
       >
       <span>Nodo master</span>
     </button>
-    <button class="button is-light">
+    <button class="button is-light" [disabled]="!system.masterNodes.length">
       <span class="icon"
         ><i class="material-icons" aria-hidden="true">add_circle</i></span
       >
