--- a/frontend/src/app/components/systems/systems/systems.component.scss
+++ b/frontend/src/app/components/systems/systems/systems.component.scss
@@ -1,4 +1,5 @@
 @import "../../../../styles/variables.scss";
+@import "bulma/sass/utilities/mixins";
 
 .title {
   display: block;
@@ -12,15 +13,19 @@
 }
 
 .system-panel {
-  width: 20%;
-  min-width: 19rem;
-  max-width: 24rem;
+  // width: 20%;
+  // min-width: 19rem;
+  max-width: 28rem;
   margin-right: 2rem;
   margin-bottom: 2rem;
   // border: 1px solid green;
 
   // Mobile view
-  @media screen and (max-width: $tablet) {
+  // @media screen and (max-width: $tablet) {
+  //   width: 100%;
+  //   margin-right: 0;
+  // }
+  @include mobile {
     width: 100%;
     margin-right: 0;
   }
