IOT-49 Added title-bar utils component

--- a/frontend/src/app/components/systems/system-panel/system-panel.component.html
+++ b/frontend/src/app/components/systems/system-panel/system-panel.component.html
@@ -80,15 +80,11 @@
   <!-- Add nodes panel -->
   <div class="panel-block">
     <button class="button is-{{ system.color }}">
-      <span class="icon"
-        ><i class="material-icons" aria-hidden="true">add_circle</i></span
-      >
+      <span class="icon"><i class="material-icons">add_circle</i></span>
       <span>Nodo master</span>
     </button>
     <button class="button is-light" [disabled]="!system.masterNodes.length">
-      <span class="icon"
-        ><i class="material-icons" aria-hidden="true">add_circle</i></span
-      >
+      <span class="icon"><i class="material-icons">add_circle</i></span>
       <span>Nodo slave</span>
     </button>
   </div>
