IOT-49 Code refactoring, added no systems label

--- a/frontend/src/app/components/systems/system-panel/system-panel.component.html
+++ b/frontend/src/app/components/systems/system-panel/system-panel.component.html
@@ -1,4 +1,4 @@
-<div class="panel is-{{ system.color }}">
+<div class="panel" [class]="system.color">
   <!-- Panel header -->
   <div class="panel-heading">
     <span class="icon"
@@ -79,7 +79,7 @@
   </ng-container>
   <!-- Add nodes panel -->
   <div class="panel-block">
-    <button class="button is-{{ system.color }}">
+    <button class="button" [class]="system.color">
       <span class="icon"><i class="material-icons">add_circle</i></span>
       <span>Nodo master</span>
     </button>
