IOT-49 Added new system component and navigation

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -7,5 +7,5 @@
     isMobileView ? '0' : isSidebarExpanded ? '200px' : '60px'
   "
 >
-  <app-systems></app-systems>
+  <router-outlet></router-outlet>
 </div>
