IOT-49 Created new system form

--- a/frontend/src/app/components/nav/menu/menu.component.html
+++ b/frontend/src/app/components/nav/menu/menu.component.html
@@ -10,7 +10,7 @@
     <span class="is-size-5">Dashboard</span>
   </a>
   <a
-    routerLink=""
+    routerLink="/systems"
     #factory
     data-index="1"
     (click)="onLinkClick(factory)"
