--- a/frontend/src/app/components/systems/new-system/new-system.component.html
+++ b/frontend/src/app/components/systems/new-system/new-system.component.html
@@ -1,1 +1,56 @@
-<p>new-system works!</p>
+<app-title-bar [title]="'Nuovo Impianto'" [buttons]="buttons"></app-title-bar>
+
+<form (ngSubmit)="onSubmit()" #systemForm="ngForm">
+  <div class="field">
+    <label class="label">Nome</label>
+    <div class="control">
+      <input
+        class="input"
+        type="text"
+        placeholder="Nome identificativo dell'impianto"
+        [maxLength]="40"
+        required
+      />
+    </div>
+  </div>
+
+  <div class="field">
+    <label class="label">Icona</label>
+    <div class="buttons">
+      <button
+        type="button"
+        class="button"
+        *ngFor="let icon of iconsList; let i = index"
+        (click)="onIconClick(i)"
+        [class.is-focused]="selectedIconIndex === i"
+      >
+        <span class="icon"
+          ><i class="material-icons">{{ icon }}</i>
+        </span>
+      </button>
+    </div>
+  </div>
+
+  <div class="field">
+    <label class="label">Colore</label>
+    <div class="buttons">
+      <button
+        type="button"
+        class="button is-rounded"
+        *ngFor="let color of colorsList; let i = index"
+        [class]="color"
+        (click)="onColorClick(i)"
+        [class.is-focused]="selectedColorIndex === i"
+      ></button>
+    </div>
+  </div>
+
+  <div class="field">
+    <div class="control">
+      <button type="submit" class="button is-primary is-spaced">
+        <span class="icon"><i class="material-icons">save</i></span>
+        <span>Salva</span>
+      </button>
+    </div>
+  </div>
+</form>
