IOT-49 Added system panel preview

--- a/frontend/src/app/components/systems/new-system/new-system.component.scss
+++ b/frontend/src/app/components/systems/new-system/new-system.component.scss
@@ -1,7 +1,23 @@
 @import "../../../../styles/variables.scss";
 @import "bulma/sass/utilities/mixins";
 
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-left: 0;
+
+  @include mobile {
+    flex-direction: column;
+  }
+}
+
+.preview {
+  width: 24rem;
+}
+
 form {
+  margin-bottom: 2rem;
   & input[type="text"] {
     max-width: 25rem;
   }
