IOT-49 Changed icons, adjusted colors

--- a/frontend/src/app/components/systems/new-system/new-system.component.html
+++ b/frontend/src/app/components/systems/new-system/new-system.component.html
@@ -4,6 +4,7 @@
 ></app-title-bar>
 
 <div class="container">
+  <!-- <div class="form-container"> -->
   <form (ngSubmit)="onSubmit(form)" #form="ngForm">
     <div class="field">
       <label class="label">Nome</label>
@@ -66,7 +67,7 @@
 
     <div class="field">
       <div class="control">
-        <button type="submit" class="button is-primary is-spaced">
+        <button type="submit" class="button has-text-white">
           <span class="icon"><i class="material-icons">save</i></span>
           <span>Salva</span>
         </button>
@@ -77,7 +78,8 @@
       </p>
     </div>
   </form>
-  <div class="preview">
+  <!-- </div> -->
+  <div class="preview-container">
     <label class="label">Anteprima</label>
     <app-system-panel [system]="system"></app-system-panel>
   </div>
