--- a/frontend/src/app/components/systems/new-system/new-system.component.scss
+++ b/frontend/src/app/components/systems/new-system/new-system.component.scss
@@ -12,16 +12,18 @@
   }
 }
 
-.preview {
-  width: 24rem;
+.preview-container {
+  max-width: 24rem;
 }
 
 form {
+  padding-right: 1.75rem;
   margin-bottom: 2rem;
   & input[type="text"] {
     max-width: 25rem;
   }
   & button[type="submit"] {
     margin-top: 0.5rem;
+    background-color: $accent;
   }
 }
