IOT-49 Implemented mobile mixins

--- a/frontend/src/app/components/nav/navbar/navbar.component.scss
+++ b/frontend/src/app/components/nav/navbar/navbar.component.scss
@@ -40,7 +40,8 @@ $link-bg-color: rgba(0, 0, 0, 0.25);
   }
 
   // Mobile view
-  @media screen and (max-width: $tablet) {
+  // @include mobile ==> @media screen and (max-width: $tablet - 1)
+  @include mobile {
     font-size: 0.85rem;
   }
 }
