--- a/frontend/src/app/components/nav/sidebar/sidebar.component.scss
+++ b/frontend/src/app/components/nav/sidebar/sidebar.component.scss
@@ -16,6 +16,7 @@ $link-bg-color: rgba(0, 0, 0, 0.25);
   overflow-x: hidden;
   z-index: 10;
 
+  // When resizing windows
   @include tablet-only {
     width: $side-navbar-collapsed-width;
   }
