--- a/frontend/src/app/components/nav/menu/menu.component.scss
+++ b/frontend/src/app/components/nav/menu/menu.component.scss
@@ -1,4 +1,5 @@
 @import "../../../../styles/variables.scss";
+@import "bulma/sass/utilities/mixins";
 
 $link-bg-color: rgba(0, 0, 0, 0.25);
 
@@ -30,7 +31,7 @@ $link-bg-color: rgba(0, 0, 0, 0.25);
       background-color: $link-bg-color;
     }
     // Mobile view
-    @media screen and (max-width: $tablet) {
+    @include mobile {
       height: 3.25em;
     }
   }
@@ -41,7 +42,7 @@ $link-bg-color: rgba(0, 0, 0, 0.25);
   margin-right: 16px;
 
   // Mobile view
-  @media screen and (max-width: $tablet) {
+  @include mobile {
     font-size: 1.5em;
   }
 }
