--- a/frontend/src/app/components/systems/system-panel/system-panel.component.scss
+++ b/frontend/src/app/components/systems/system-panel/system-panel.component.scss
@@ -52,13 +52,13 @@
   }
 }
 
-.slave-panel {
+.simple-nodes-panel {
   max-height: 9.5em;
   overflow-y: auto;
   padding-left: 1em;
 }
 
-.panel-block .slave-block {
+.panel-block .simple-node-block {
   padding: 0.25em 0 0.25em 0.5em;
   width: 100%;
   display: flex;
@@ -68,5 +68,23 @@
 
   &:hover .list-item-controls {
     display: block;
+  }
+}
+
+.online-node {
+  & .material-icons {
+    color: $success-dark;
+  }
+}
+
+.offline-node {
+  & .material-icons {
+    color: $danger;
+  }
+}
+
+.deactivated-node {
+  & .material-icons {
+    color: #7a7a7a;
   }
 }
