--- a/frontend/src/app/components/utils/title-bar/title-bar.component.scss
+++ b/frontend/src/app/components/utils/title-bar/title-bar.component.scss
@@ -17,6 +17,10 @@
     flex-grow: 1;
     margin: 0.5rem 0;
     padding-right: 2.5rem;
+
+    @include mobile {
+      font-size: 1.5rem;
+    }
   }
 
   & .title-buttons-container {
