IOT-49 Changed draft db files' extension

--- a/frontend/src/app/components/systems/system-panel/system-panel.component.html
+++ b/frontend/src/app/components/systems/system-panel/system-panel.component.html
@@ -6,7 +6,7 @@
     >
     <span>{{ system.name }}</span>
   </div>
-
+  <!-- TODO: Add tooltips -->
   <!-- Search panel -->
   <div class="panel-block">
     <p class="control has-icons-left">
