IOT-49 Hidden add simple node if smarts offline

--- a/frontend/src/app/components/systems/system-panel/system-panel.component.html
+++ b/frontend/src/app/components/systems/system-panel/system-panel.component.html
@@ -119,9 +119,8 @@
           ? 'is-white'
           : system.color + ' is-light'
       "
-      [disabled]="isStandaloneSystem()"
+      [disabled]="isStandaloneSystem() || areNonStandaloneNodesOffline()"
     >
-      <!-- TODO: Disable if all the smart nodes are standalone -->
       <span class="icon"><i class="material-icons">add_circle</i></span>
       <span>Nodo semplice</span>
     </button>
