IOT-49 Added system panel preview mode

--- a/frontend/src/app/components/systems/new-system/new-system.component.html
+++ b/frontend/src/app/components/systems/new-system/new-system.component.html
@@ -79,6 +79,6 @@
   </form>
   <div class="preview-container">
     <label class="label">Anteprima</label>
-    <app-system-panel [system]="system"></app-system-panel>
+    <app-system-panel [system]="system" [isPreview]="true"></app-system-panel>
   </div>
 </div>
